[gd_scene load_steps=12 format=3 uid="uid://b7kfdbpdqk3o6"]

[ext_resource type="PackedScene" uid="uid://dnpca2xy4g5u4" path="res://Blender/door.gltf" id="1_ju2bi"]
[ext_resource type="Script" path="res://Scenes_Scripts/Levels/Objects/Door.gd" id="1_oolfw"]
[ext_resource type="PackedScene" uid="uid://nf1bgcn3f8w0" path="res://Scenes_Scripts/Entities/Entity Elements/Interactable.tscn" id="2_avstk"]
[ext_resource type="AudioStream" uid="uid://ddjse2wu1pht5" path="res://Scenes_Scripts/Sounds/pagancow_japanyoshithegamer-door.wav" id="4_1sl82"]

[sub_resource type="Shader" id="Shader_i40ng"]
code = "//Copyright 2021 redvillusion
//
//Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files 
//(the \"Software\"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, 
//merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished
//to do so, subject to the following conditions:
//
//The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
//
//THE SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES 
//OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE 
//LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR 
//IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 
shader_type spatial;
 
render_mode unshaded, cull_front;
 
uniform bool enabled = false;
const float transparency = 0.0;
 
uniform float border_width : hint_range(0,1,0.001) = 0.02;
uniform vec4 color : source_color = vec4(0.71, 0.267, 0.51, 1);
 
uniform bool pattern = true;
uniform float line_number : hint_range(0,100,1) = 2;
uniform float line_sharpness : hint_range(0,10,0.001) = 1;
 
uniform bool pulse;
uniform float pulse_speed : hint_range(0,100,1);
 
uniform bool line_movement = true;
uniform float line_movement_speed : hint_range(-100,100,1) = 1;
 
uniform bool wave;
 
void vertex() {
	
	VERTEX += VERTEX * border_width * float(enabled);
}
 
void fragment() {
	
	ALPHA = transparency;
	if (enabled) {
		ALBEDO = color.xyz;
		ALPHA = color.a;
		if (pattern)
			{
				vec2 uv = VERTEX.xy * line_number;
				ALBEDO = sin(uv.xxx + uv.yyy) * line_sharpness * color.xyz;
		 
				if (pulse)
				{
					ALBEDO = sin(uv.xxx + uv.yyy) * line_sharpness * color.xyz * sin(TIME * pulse_speed);
				}
		 
				if (line_movement)
				{
					ALBEDO = sin(uv.xxx + uv.yyy + TIME * line_movement_speed) * line_sharpness * color.xyz;
				}
		 
				if (pulse && line_movement)
				{
					ALBEDO = sin(uv.xxx + uv.yyy + TIME * line_movement_speed) * line_sharpness * color.xyz * sin(TIME * pulse_speed);
				}
			}
	}
	
 
	if (wave)
	{
		vec2 uv = VERTEX.xy * line_number;
		ALBEDO = sin(uv.xxx + TIME * line_movement_speed) * line_sharpness * color.xyz;
	}
 
}"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_k3v50"]
render_priority = 0
shader = SubResource("Shader_i40ng")
shader_parameter/enabled = false
shader_parameter/border_width = 0.02
shader_parameter/color = Color(0.71, 0.267, 0.51, 1)
shader_parameter/pattern = true
shader_parameter/line_number = 2.0
shader_parameter/line_sharpness = 1.0
shader_parameter/pulse = null
shader_parameter/pulse_speed = null
shader_parameter/line_movement = true
shader_parameter/line_movement_speed = 1.0
shader_parameter/wave = null

[sub_resource type="BoxShape3D" id="BoxShape3D_h5g04"]
size = Vector3(1.00317, 2.24445, 0.0975952)

[sub_resource type="BoxShape3D" id="BoxShape3D_m2ieq"]
size = Vector3(3, 3, 3)

[sub_resource type="Animation" id="Animation_po5mm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("door:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_6vqgn"]
resource_name = "open"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("door:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 1.6057, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_755vy"]
_data = {
"RESET": SubResource("Animation_po5mm"),
"open": SubResource("Animation_6vqgn")
}

[node name="Door" type="StaticBody3D" node_paths=PackedStringArray("focused_meshes")]
collision_layer = 64
collision_mask = 133
script = ExtResource("1_oolfw")
monologue_data = Array[String](["[center]This place is safe enough, I should not wander.[/center][center]At least until [i]it[/i] follows me here.[/center]"])
monologue_first_line_time = 0.4
focused_meshes = [NodePath("door/House_Demo_039")]

[node name="door" parent="." instance=ExtResource("1_ju2bi")]

[node name="House_Demo_039" parent="door" index="0"]
material_overlay = SubResource("ShaderMaterial_k3v50")

[node name="Interactable" parent="door" instance=ExtResource("2_avstk")]

[node name="CollisionShape3D" parent="door/Interactable" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.505981, 1.12448, 0.00576782)
shape = SubResource("BoxShape3D_h5g04")

[node name="CollisionShape3D" parent="door/Interactable/InteractableRange" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.505981, 1.12448, 0)
shape = SubResource("BoxShape3D_m2ieq")

[node name="RemoteTransform3D" type="RemoteTransform3D" parent="door"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.496499, 1.12394, 0)
remote_path = NodePath("../../Collider")

[node name="Collider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.496499, 1.12394, 0)
shape = SubResource("BoxShape3D_h5g04")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_755vy")
}

[node name="openAudioPlayer" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0662552, 1, 0)
stream = ExtResource("4_1sl82")
max_db = 6.0
bus = &"Sounds"

[connection signal="focused" from="door/Interactable" to="." method="_on_interactable_focused"]
[connection signal="interact" from="door/Interactable" to="." method="_on_interactable_interact"]
[connection signal="unfocused" from="door/Interactable" to="." method="_on_interactable_unfocused"]

[editable path="door"]
[editable path="door/Interactable"]
